Complete explicit applicability-schema coverage for safe preparation (#968)
Completes #745 Section C with fail-closed explicit applicability schemas, near-match ranking characterization, rational cancellation hardening, and synchronized product-integration documentation.